avoid that previewwindow overflows window fix for #11

--- a/src/components/PreviewWindow/PreviewWindow.module.css
+++ b/src/components/PreviewWindow/PreviewWindow.module.css
@@ -2,15 +2,15 @@
   text-align: center;
   position: fixed;
   top: 5%;
-  left: 78%;
-  padding: 1%;
-  margin: 1px;
+  left: 80%;
+  padding: 1px;
+  margin: 1%;
   font-size: 200%;
   background-color: #eee;
   border: 1px solid black;
   min-width: 10%;
   min-height: 10%;
-  max-width: 20%;
+  max-width: 18%;
   box-shadow: 0px 1px 1px 0px;
-  overflow: none;
+  overflow: auto;
 }
