--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
   border-top: 0;
   border-radius: 0 0 10px 10px;
   background: rgba(255, 255, 255, 0.5);
-  width: 960px;
+  width: 60%;
 }
 button {
   display: inline;
